Add some information (name, environment, custom info)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 sentry.dsn={SOME_DSN}
+sentry.server-name=some-api
+sentry.environment=${spring.profiles.active}
+sentry.tags.my-custom=COOL
+spring.profiles.active=local
