Add user information from HTTP request (IP)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ sentry.dsn={SOME_DSN}
 sentry.server-name=some-api
 sentry.environment=${spring.profiles.active}
 sentry.tags.my-custom=COOL
+sentry.send-default-pii=true
 spring.profiles.active=local
