Add custom user information from HTTP request

--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,10 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     implementation "io.sentry:sentry-spring-boot-starter:${sentryVersion}"
-    
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
