--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+# Sentry
 sentry.dsn={SOME_DSN}
 sentry.server-name=some-api
 sentry.environment=${spring.profiles.active}
 sentry.tags.my-custom=COOL
 sentry.send-default-pii=true
+# Security
+spring.security.user.name=fed
+spring.security.user.password=1111
+# Profile
 spring.profiles.active=local
